--- a/project.html
+++ b/project.html
@@ -68,6 +68,6 @@
     </a>
     <span id="Year">2024</span>
   </footer>
-    <script src="index.js" ></script>
+    <script src="index.js" defer></script>
 </body>
 </html>
